# killuanix

./: .gitignore  .gitmodules  .mcp.json  .sops.yaml  CLAUDE.md  README.md  archlinux-nix  brewlist.txt  flake copy.nix  flake.nix  flake.nix-mkdarwin  install  install.sh  nohup.out  result
archlinux/: .gitignore_global  home.nix
archnix/: .gitconfig  home.nix  system-manager.nix
chrollo/: configuration.nix
common/: packages.nix  zsh.nix
gp-vpn-container/: Dockerfile  all-boeing-certs.pem  docker-compose.yml
handheld/: boot.nix  configuration.nix  gaming.nix  handheld-tweaks.nix  hardware-configuration.nix  hhd.nix  home.nix  intel-gpu.nix  wifi-fix.nix
homemanager/: home.nix  home.nix.save  result
homemanager-back/: home.nix
killua/: bluez5-ldac-pin.nix  boot.nix  configuration.nix  device-monitors.lua  gaming.nix  handheld-tweaks.nix  hardware-configuration.nix  home.nix  intel-gpu.nix  kanshi.nix
macnix/: brew.nix  configuration.nix  default.nix  defaults.sh  dots-manage.nix  home.nix  services.nix  settings.nix
modules/common/programs/dev/ai/claude-kit/plan/: package.nix  pyproject.toml
modules/common/programs/dev/ai/claude-kit/plan/src/claude_kit_plan/: cli.py  frontmatter.py  plan.py  sdk_helpers.py  suggest.py
modules/common/programs/dev/ai/claude-kit/plan/src/claude_kit_plan/prompts/: plan-template.md  suggestion.md
nixos/: configuration.nix  configuration.nix.save  hardware-configuration.nix
overlays/: default.nix  pipewire-pin.nix
post-install/: .gitignore  INSTRUCTIONS.md  README.md  bootstrap.sh  convert-ssh-to-age.sh  run.sh
(+539 files in other folders)
